tests/NormalTests/paczka1/fuzzy1/63543108.err
Error in line 1: NkEbVCZifu S823 50,2
Error in line 3: A278 A406 65,0
Error in line 7: PvyQDzc87x A406 42,5
Error in line 9: TXAS6fn S823 82,0
Error in line 2: NkEbVCZifu A406 74,4
Error in line 24: QxUQM S933 30,8
Error in line 27: PvyQDzc87x S933 98,1
Error in line 25: A278 A406 73,0
Error in line 37: A278 A406 6,6
